# Synthesizer

./: CMakeLists.txt  main.cpp
src/: main.cpp
src/backend/: audio.cpp  audio.h  device.cpp  device.h
